Finished first draft of JAgoraHttpLib.